--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>A free responsive web site template by <a href="https://templated.co">ANGELITO OFICINA</a></p>
+							<p>Esto lo cambio desde PORTATIL<a href="https://templated.co">ANGELITO OFICINA</a></p>
 							<h2>Hielo</h2>
 						</header>
 					</div>
